...
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="Accueil" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="Ajouter" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
...
